# crispy-pancake

./: .env.template  .gitignore  create_accounts.py  run-backend.ps1  run-frontend.ps1  setup_storage_policies.py  test_all_endpoints.py  test_chat_flow.py  test_uploads.py
START_TEMPLATE/: .env.template  .gitignore  COPILOT_INSTRUCTIONS.md  README.md  pyproject.toml
START_TEMPLATE/backend/shared/: __init__.py
START_TEMPLATE/backend/shared/admin/: README.md  __init__.py  backup_manager.py  config.yaml  config_manager.py  models.py  router_factory.py
START_TEMPLATE/backend/shared/analytics/: README.md  __init__.py  config.yaml  sanitizer.py  umami.py
START_TEMPLATE/backend/shared/auth/: __init__.py  authStorage.js  base.py  config.yaml  decorators.py  supabase.py  supabaseinstructions.md
START_TEMPLATE/backend/shared/credits/: __init__.py  base.py  config.yaml  config_loader.py  exceptions.py  migration.sql  models.py  pricing_service.py  run_migration.py  stripe_service.py
START_TEMPLATE/backend/shared/payments/: base.py  (+6 more)
START_TEMPLATE/docs/: ADMIN.md  ANALYTICS.md  AUTH.md  CREDITS.md  DATABASE.md  ENVIRONMENT_SETUP.md  FRONTEND.md  LOGGING.md  PAYMENTS.md  TELEMETRY.md
START_TEMPLATE/frontend/: package.json  vite.config.ts
START_TEMPLATE/frontend/src/: ThemeProvider.tsx  index.css
backend/: config.yaml  main.py  pyproject.toml  requirements.txt
backend/auth/: __init__.py  dependencies.py
backend/routes/: auth.py  config_routes.py  conversations.py  issues.py  messages.py  profiles.py  responses.py  uploads.py
backend/services/: supabase_client.py
(+61 files in other folders)
